--- a/src/desktop/discoverydialog.ui
+++ b/src/desktop/discoverydialog.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Dialog</string>
+   <string>Board Discovery</string>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout">
    <item>
