--- a/src/desktop/mainwindow.ui
+++ b/src/desktop/mainwindow.ui
@@ -73,9 +73,43 @@
     <addaction name="action_Resign"/>
     <addaction name="action_Exit"/>
    </widget>
+   <widget class="QMenu" name="menu_View">
+    <property name="title">
+     <string>&amp;View</string>
+    </property>
+    <addaction name="action_Edit_Mode"/>
+   </widget>
    <addaction name="menu_File"/>
+   <addaction name="menu_View"/>
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
+  <widget class="QToolBar" name="editToolBar">
+   <property name="windowTitle">
+    <string>Edit Board</string>
+   </property>
+   <property name="toolButtonStyle">
+    <enum>Qt::ToolButtonTextOnly</enum>
+   </property>
+   <attribute name="toolBarArea">
+    <enum>TopToolBarArea</enum>
+   </attribute>
+   <attribute name="toolBarBreak">
+    <bool>false</bool>
+   </attribute>
+   <addaction name="action_Empty"/>
+   <addaction name="action_White_Pawn"/>
+   <addaction name="action_White_Rook"/>
+   <addaction name="action_White_Knight"/>
+   <addaction name="action_White_Bishop"/>
+   <addaction name="action_White_Queen"/>
+   <addaction name="action_White_King"/>
+   <addaction name="action_Black_Pawn"/>
+   <addaction name="action_Black_Rook"/>
+   <addaction name="action_Black_Knight"/>
+   <addaction name="action_Black_Bishop"/>
+   <addaction name="action_Black_Queen"/>
+   <addaction name="action_Black_King"/>
+  </widget>
   <action name="action_Connect">
    <property name="text">
     <string>&amp;Connect...</string>
@@ -106,7 +140,191 @@
     <string>&amp;Exit</string>
    </property>
   </action>
+  <action name="action_Edit_Mode">
+   <property name="checkable">
+    <bool>true</bool>
+   </property>
+   <property name="text">
+    <string>&amp;Edit Board</string>
+   </property>
+  </action>
+  <action name="action_White_Pawn">
+   <property name="checkable">
+    <bool>true</bool>
+   </property>
+   <property name="text">
+    <string>♙</string>
+   </property>
+   <property name="toolTip">
+    <string>White Pawn</string>
+   </property>
+  </action>
+  <action name="action_White_Knight">
+   <property name="checkable">
+    <bool>true</bool>
+   </property>
+   <property name="text">
+    <string>♘</string>
+   </property>
+   <property name="toolTip">
+    <string>White Knight</string>
+   </property>
+  </action>
+  <action name="action_White_Bishop">
+   <property name="checkable">
+    <bool>true</bool>
+   </property>
+   <property name="text">
+    <string>♗</string>
+   </property>
+   <property name="toolTip">
+    <string>White Bishop</string>
+   </property>
+  </action>
+  <action name="action_White_Queen">
+   <property name="checkable">
+    <bool>true</bool>
+   </property>
+   <property name="text">
+    <string>♕</string>
+   </property>
+   <property name="toolTip">
+    <string>White Queen</string>
+   </property>
+  </action>
+  <action name="action_White_King">
+   <property name="checkable">
+    <bool>true</bool>
+   </property>
+   <property name="text">
+    <string>♔</string>
+   </property>
+   <property name="toolTip">
+    <string>White King</string>
+   </property>
+  </action>
+  <action name="action_Black_Pawn">
+   <property name="checkable">
+    <bool>true</bool>
+   </property>
+   <property name="text">
+    <string>♟</string>
+   </property>
+   <property name="toolTip">
+    <string>Black Pawn</string>
+   </property>
+  </action>
+  <action name="action_Black_Rook">
+   <property name="checkable">
+    <bool>true</bool>
+   </property>
+   <property name="text">
+    <string>♜</string>
+   </property>
+   <property name="toolTip">
+    <string>Black Rook</string>
+   </property>
+  </action>
+  <action name="action_Black_Knight">
+   <property name="checkable">
+    <bool>true</bool>
+   </property>
+   <property name="text">
+    <string>♞</string>
+   </property>
+   <property name="toolTip">
+    <string>Black Knight</string>
+   </property>
+  </action>
+  <action name="action_Black_Bishop">
+   <property name="checkable">
+    <bool>true</bool>
+   </property>
+   <property name="text">
+    <string>♝</string>
+   </property>
+   <property name="toolTip">
+    <string>Black Bishop</string>
+   </property>
+  </action>
+  <action name="action_Black_Queen">
+   <property name="checkable">
+    <bool>true</bool>
+   </property>
+   <property name="text">
+    <string>♛</string>
+   </property>
+   <property name="toolTip">
+    <string>Black Queen</string>
+   </property>
+  </action>
+  <action name="action_Black_King">
+   <property name="checkable">
+    <bool>true</bool>
+   </property>
+   <property name="text">
+    <string>♚</string>
+   </property>
+   <property name="toolTip">
+    <string>Black King</string>
+   </property>
+  </action>
+  <action name="action_White_Rook">
+   <property name="checkable">
+    <bool>true</bool>
+   </property>
+   <property name="text">
+    <string>♖</string>
+   </property>
+   <property name="toolTip">
+    <string>White Rook</string>
+   </property>
+  </action>
+  <action name="action_Empty">
+   <property name="checkable">
+    <bool>true</bool>
+   </property>
+   <property name="text">
+    <string>✘</string>
+   </property>
+   <property name="toolTip">
+    <string>Empty</string>
+   </property>
+  </action>
  </widget>
  <resources/>
- <connections/>
+ <connections>
+  <connection>
+   <sender>editToolBar</sender>
+   <signal>visibilityChanged(bool)</signal>
+   <receiver>action_Edit_Mode</receiver>
+   <slot>setChecked(bool)</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>399</x>
+     <y>28</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>-1</x>
+     <y>-1</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>action_Edit_Mode</sender>
+   <signal>toggled(bool)</signal>
+   <receiver>editToolBar</receiver>
+   <slot>setVisible(bool)</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>-1</x>
+     <y>-1</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>399</x>
+     <y>28</y>
+    </hint>
+   </hints>
+  </connection>
+ </connections>
 </ui>
