--- a/src/desktop/newgamedialog.ui
+++ b/src/desktop/newgamedialog.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>340</width>
-    <height>256</height>
+    <width>470</width>
+    <height>316</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -21,7 +21,7 @@
        <property name="title">
         <string>&amp;White</string>
        </property>
-       <layout class="QVBoxLayout" name="verticalLayout_7">
+       <layout class="QVBoxLayout" name="verticalLayout_8">
         <item>
          <widget class="QRadioButton" name="whiteHumanRadioButton">
           <property name="text">
@@ -36,7 +36,7 @@
          </widget>
         </item>
         <item>
-         <layout class="QVBoxLayout" name="verticalLayout_4">
+         <layout class="QVBoxLayout" name="verticalLayout_7">
           <property name="leftMargin">
            <number>12</number>
           </property>
@@ -66,6 +66,57 @@
          </layout>
         </item>
         <item>
+         <layout class="QVBoxLayout" name="verticalLayout_4">
+          <property name="spacing">
+           <number>3</number>
+          </property>
+          <property name="leftMargin">
+           <number>12</number>
+          </property>
+          <item>
+           <widget class="QLabel" name="whiteAssistanceLevelLabel">
+            <property name="sizePolicy">
+             <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
+              <horstretch>0</horstretch>
+              <verstretch>0</verstretch>
+             </sizepolicy>
+            </property>
+            <property name="text">
+             <string>&amp;Assistance:</string>
+            </property>
+            <property name="buddy">
+             <cstring>whiteAiDifficultySlider</cstring>
+            </property>
+           </widget>
+          </item>
+          <item>
+           <widget class="QSlider" name="whiteAssistanceLevelSlider">
+            <property name="minimum">
+             <number>1</number>
+            </property>
+            <property name="maximum">
+             <number>6</number>
+            </property>
+            <property name="singleStep">
+             <number>1</number>
+            </property>
+            <property name="pageStep">
+             <number>1</number>
+            </property>
+            <property name="value">
+             <number>1</number>
+            </property>
+            <property name="orientation">
+             <enum>Qt::Horizontal</enum>
+            </property>
+            <property name="tickPosition">
+             <enum>QSlider::TicksBelow</enum>
+            </property>
+           </widget>
+          </item>
+         </layout>
+        </item>
+        <item>
          <widget class="QRadioButton" name="whiteAiRadioButton">
           <property name="text">
            <string>&amp;AI</string>
@@ -84,7 +135,7 @@
            <number>12</number>
           </property>
           <item>
-           <widget class="QLabel" name="label">
+           <widget class="QLabel" name="whiteAiDifficultyLabel">
             <property name="enabled">
              <bool>false</bool>
             </property>
@@ -134,7 +185,7 @@
        <property name="title">
         <string>&amp;Black</string>
        </property>
-       <layout class="QVBoxLayout" name="verticalLayout_6">
+       <layout class="QVBoxLayout" name="verticalLayout_9">
         <item>
          <widget class="QRadioButton" name="blackHumanRadioButton">
           <property name="text">
@@ -179,6 +230,57 @@
          </layout>
         </item>
         <item>
+         <layout class="QVBoxLayout" name="verticalLayout_6">
+          <property name="spacing">
+           <number>3</number>
+          </property>
+          <property name="leftMargin">
+           <number>12</number>
+          </property>
+          <item>
+           <widget class="QLabel" name="blackAssistanceLevelLabel">
+            <property name="sizePolicy">
+             <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
+              <horstretch>0</horstretch>
+              <verstretch>0</verstretch>
+             </sizepolicy>
+            </property>
+            <property name="text">
+             <string>&amp;Assistance:</string>
+            </property>
+            <property name="buddy">
+             <cstring>whiteAiDifficultySlider</cstring>
+            </property>
+           </widget>
+          </item>
+          <item>
+           <widget class="QSlider" name="blackAssistanceLevelSlider">
+            <property name="minimum">
+             <number>1</number>
+            </property>
+            <property name="maximum">
+             <number>6</number>
+            </property>
+            <property name="singleStep">
+             <number>1</number>
+            </property>
+            <property name="pageStep">
+             <number>1</number>
+            </property>
+            <property name="value">
+             <number>1</number>
+            </property>
+            <property name="orientation">
+             <enum>Qt::Horizontal</enum>
+            </property>
+            <property name="tickPosition">
+             <enum>QSlider::TicksBelow</enum>
+            </property>
+           </widget>
+          </item>
+         </layout>
+        </item>
+        <item>
          <widget class="QRadioButton" name="blackAiRadioButton">
           <property name="text">
            <string>&amp;AI</string>
@@ -197,7 +299,7 @@
            <number>12</number>
           </property>
           <item>
-           <widget class="QLabel" name="label_2">
+           <widget class="QLabel" name="blackAiDifficultyLabel">
             <property name="enabled">
              <bool>false</bool>
             </property>
@@ -341,7 +443,7 @@
   <connection>
    <sender>whiteAiRadioButton</sender>
    <signal>toggled(bool)</signal>
-   <receiver>label</receiver>
+   <receiver>whiteAiDifficultyLabel</receiver>
    <slot>setEnabled(bool)</slot>
    <hints>
     <hint type="sourcelabel">
@@ -405,7 +507,7 @@
   <connection>
    <sender>blackAiRadioButton</sender>
    <signal>toggled(bool)</signal>
-   <receiver>label_2</receiver>
+   <receiver>blackAiDifficultyLabel</receiver>
    <slot>setEnabled(bool)</slot>
    <hints>
     <hint type="sourcelabel">
@@ -418,11 +520,75 @@
     </hint>
    </hints>
   </connection>
+  <connection>
+   <sender>blackHumanRadioButton</sender>
+   <signal>toggled(bool)</signal>
+   <receiver>blackAssistanceLevelLabel</receiver>
+   <slot>setEnabled(bool)</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>348</x>
+     <y>52</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>353</x>
+     <y>130</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>blackHumanRadioButton</sender>
+   <signal>toggled(bool)</signal>
+   <receiver>blackAssistanceLevelSlider</receiver>
+   <slot>setEnabled(bool)</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>348</x>
+     <y>52</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>354</x>
+     <y>154</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>whiteHumanRadioButton</sender>
+   <signal>toggled(bool)</signal>
+   <receiver>whiteAssistanceLevelLabel</receiver>
+   <slot>setEnabled(bool)</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>118</x>
+     <y>52</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>123</x>
+     <y>130</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>whiteHumanRadioButton</sender>
+   <signal>toggled(bool)</signal>
+   <receiver>whiteAssistanceLevelSlider</receiver>
+   <slot>setEnabled(bool)</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>118</x>
+     <y>52</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>124</x>
+     <y>154</y>
+    </hint>
+   </hints>
+  </connection>
  </connections>
  <buttongroups>
-  <buttongroup name="buttonGroup"/>
-  <buttongroup name="buttonGroup_2"/>
-  <buttongroup name="buttonGroup_3"/>
   <buttongroup name="buttonGroup_4"/>
+  <buttongroup name="buttonGroup"/>
+  <buttongroup name="buttonGroup_3"/>
+  <buttongroup name="buttonGroup_2"/>
  </buttongroups>
 </ui>
