--- a/src/desktop/mainwindow.ui
+++ b/src/desktop/mainwindow.ui
@@ -59,7 +59,7 @@
      <x>0</x>
      <y>0</y>
      <width>800</width>
-     <height>17</height>
+     <height>24</height>
     </rect>
    </property>
    <widget class="QMenu" name="menu_File">
@@ -73,14 +73,15 @@
     <addaction name="action_Resign"/>
     <addaction name="action_Exit"/>
    </widget>
-   <widget class="QMenu" name="menu_View">
+   <widget class="QMenu" name="menu_Edit">
     <property name="title">
-     <string>&amp;View</string>
+     <string>&amp;Edit</string>
     </property>
+    <addaction name="action_Undo"/>
     <addaction name="action_Edit_Mode"/>
    </widget>
    <addaction name="menu_File"/>
-   <addaction name="menu_View"/>
+   <addaction name="menu_Edit"/>
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
   <widget class="QToolBar" name="editToolBar">
@@ -122,7 +123,7 @@
   </action>
   <action name="action_New_Game">
    <property name="text">
-    <string>&amp;New Game</string>
+    <string>&amp;New Game...</string>
    </property>
   </action>
   <action name="action_Request_Draw">
@@ -289,6 +290,11 @@
    </property>
    <property name="toolTip">
     <string>Empty</string>
+   </property>
+  </action>
+  <action name="action_Undo">
+   <property name="text">
+    <string>&amp;Undo</string>
    </property>
   </action>
  </widget>
